# huffman-archiver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  ci.yml
app/cli/: CMakeLists.txt  main.c
app/core/: CMakeLists.txt
app/core/include/: huffman.h
app/core/src/: huffman.c
